  (Florian Angeletti, review by Fabrice Buoro, Kate Deplaix, Damien Doligez, and
   Gabriel Scherer)

- #12976: Manual: use webman/<version>/*.html and
  webman/<version>/api/ for OCaml.org HTML manual generation
  (Shakthi Kannan, review by Hannes Mehnert, and Florian Angeletti)

- #13045: Emphasize caution about behaviour of custom block finalizers.
  (Nick Barnes)

### Compiler user-interface and warnings:

* #12084: Check link order when creating archive and when using ocamlopt
  (Hugo Heuzard, review by Stefan Muenzel and Sébastien Hinderer)

- #12980: Explain type mismatch involving first-class modules by including
  the module level error message
  (Florian Angeletti, review by Vincent Laviron)

- #12985, #12988: Better error messages for partially applied functors.
  (Florian Angeletti, report by Arthur Wendling, review by Gabriel Scherer)

- #13034, #13260: Better error messages for mismatched function labels
  (Florian Angeletti, report by Daniel Bünzli, review by Gabriel Scherer and
   Samuel Vivien)

- #13051: Add a "Syntax error" to error messages for invalid package signatures.
  (Samuel Vivien, review by Gabriel Scherer)

- #13099: Fix erroneous loading of cmis for some module type errors.
  (Nick Roberts, review by Florian Angeletti)

- #13151, name conflicts explanation as a footnote
  (Florian Angeletti, review by Gabriel Scherer)

- #13228: Re-export Cmt2annot.{iterator,binary_part} which had become hidden
  since #11288 and broke ocamlbrowser.
  (David Allsopp, report by Jacques Garrigue, review by Sébastien Hinderer)

- #13251: Register printer for errors in Emitaux
  (Vincent Laviron, review by Miod Vallat and Florian Angeletti)

- #13255: Re-enable warning 34 for unused locally abstract types
  (Nick Roberts, review by Chris Casinghino and Florian Angeletti)

### Internal/compiler-libs changes:

- #11129, #11148: enforce that ppxs do not produce `parsetree`s with
  an empty list of universally quantified type variables