@@ -230,6 +230,13 @@ _______________
 - #13045: Emphasize caution about behaviour of custom block finalizers.
   (Nick Barnes)
 
+- #13287: stdlib/sys.mli: Update documentation on `Sys.opaque_identity`
+  to include liveness analysis information, as changed in
+  https://github.com/ocaml/ocaml/pull/9412.  In particular, noted that
+  the garbage collector will not collect the argument of
+  `Sys.opaque_identity` until after it has been called.
+  (Matt Walker)
+
 ### Compiler user-interface and warnings:
 
 * #12084: Check link order when creating archive and when using ocamlopt
